Fixes Hack font not showing on kindle device, all font files moved to root directory

--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,22 @@
 /* Hack font for code blocks */
 @font-face {
 	font-family: "Hack-Regular";
-	src: url("font/Hack-Regular.ttf");
+	src: url("Hack-Regular.ttf");
 }
 
 @font-face {
 	font-family: "Hack-Bold";
-	src: url("font/Hack-Bold.ttf");
+	src: url("Hack-Bold.ttf");
 }
 
 @font-face {
 	font-family: "Hack-BoldItalic";
-	src: url("font/Hack-BoldItalic.ttf");
+	src: url("Hack-BoldItalic.ttf");
 }
 
 @font-face {
 	font-family: "Hack-Italic";
-	src: url("font/Hack-Italic.ttf");
+	src: url("Hack-Italic.ttf");
 }
 
 /* Key words in the text are made bold italic */
